--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -4,7 +4,7 @@
     <a href="#">Tom</a>
   </div>
   <div class="create-room">
-    <%= link_to "チャットを作成する", new_room_path %>
+    <%= link_to room.name, room_messages_path(room) %>
   </div>
 </div>
 <div class="rooms">
